<resources>
    <string name="app_name">DrinkWater</string>
    <string name="next">Next</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_you">About You</string>
    <string name="tell_us_about_yourself">Tell us about yourself and we will check how much water you need during the day.</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="select_your_date_of_birth">Select your date of birth</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="back">Back</string>
    <string name="what_is_your_name">What\'s your name?</string>
    <string name="ok">OK</string>
    <string name="the_name_field_cannot_be_empty">The name field cannot be empty.</string>
    <string name="the_date_field_cannot_be_empty">The date field cannot be empty.</string>
    <string name="what_is_your_weight">What is your weight?</string>
    <string name="enter_your_weight_to_calculate">Enter your weight to calculate the fluid requirement</string>
    <string name="what_is_your_day_look_like">What\'s your day look like?</string>
    <string name="your_daily_habits_will_tell_us">Your daily habits will tell us when you receive a notification</string>
    <string name="select_time">Select time</string>
    <string name="i_wake_up_at">I wake up at</string>
    <string name="i_fall_asleep_at">I fall asleep at</string>
    <string name="my_drinking_interval">My drinking interval</string>
    <string name="select_interval">Select interval</string>
    <string name="how_often_you_drink">How often you drink?</string>
    <string name="fields_must_be_filled">Fields must be filled.</string>
    <string name="history">History</string>
    <string name="stats">Stats</string>
    <string name="reminder">Reminder</string>
    <string name="clear">Clear</string>
    <string name="profile">Profile</string>
    <string name="gender">Gender</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="weight">Weight</string>
    <string name="your_goal">Your Goal</string>
    <string name="water">Water</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="milk">Milk</string>
    <string name="fruit_juice">Fruit juice</string>
    <string name="soda">Soda</string>
    <string name="text_150_ml">150 ml</string>
    <string name="text_250_ml">250 ml</string>
    <string name="text_300_ml">300 ml</string>
    <string name="text_200_ml">200 ml</string>
    <string name="weather">Weather</string>
    <string name="hot">Hot</string>
    <string name="add_412_ml">+412 ml</string>
    <string name="warm">Warm</string>
    <string name="add_247_ml">+247 ml</string>
    <string name="add_0_ml">+0 ml</string>
    <string name="normal">Normal</string>
    <string name="cold">Cold</string>
    <string name="add_165_ml">+165 ml</string>
    <string name="physical_activity">Physical activity</string>
    <string name="very_active">Very Active</string>
    <string name="add_495_ml">+495 ml</string>
    <string name="active">Active</string>
    <string name="add_330_ml">+330 ml</string>
    <string name="inactive">Inactive</string>
</resources>