<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:icon="@drawable/ic_history"
            android:id="@+id/nav_history"
            android:title="@string/history" />

        <item
            android:icon="@drawable/ic_stats"
            android:id="@+id/nav_stats"
            android:title="@string/stats" />

        <item
            android:icon="@drawable/ic_notification"
            android:id="@+id/nav_reminder"
            android:title="@string/reminder" />

<!--        <item-->
<!--            android:icon="@drawable/ic_history"-->
<!--            android:id="@+id/nav_history"-->
<!--            android:title="History" />-->





    </group>
</menu>