<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_intro_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.intro.ScheduleFragment">

    <TextView
        android:id="@+id/fragmentScheduleTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/what_is_your_day_look_like"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/fragmentScheduleDescText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/fragmentScheduleTitleText"
        app:layout_constraintEnd_toEndOf="@+id/fragmentScheduleTitleText"
        app:layout_constraintTop_toBottomOf="@+id/fragmentScheduleTitleText"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/your_daily_habits_will_tell_us"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/fragmentScheduleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/clock"
        app:layout_constraintTop_toBottomOf="@+id/fragmentScheduleDescText"
        app:layout_constraintStart_toStartOf="@+id/fragmentScheduleDescText"
        app:layout_constraintEnd_toEndOf="@+id/fragmentScheduleDescText"
        android:layout_marginTop="32dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentScheduleWakeUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_about_borderline"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fragmentScheduleImageView"
        app:layout_constraintStart_toStartOf="@+id/fragmentScheduleImageView"
        app:layout_constraintEnd_toEndOf="@+id/fragmentScheduleImageView"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_wake_up_at"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/fragmentScheduleWakeUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:textColor="@color/tab_indicator_gray"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="12sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentScheduleFallLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_about_borderline"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fragmentScheduleWakeUpLayout"
        app:layout_constraintStart_toStartOf="@+id/fragmentScheduleWakeUpLayout"
        app:layout_constraintEnd_toEndOf="@+id/fragmentScheduleWakeUpLayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_fall_asleep_at"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/fragmentScheduleFallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:textColor="@color/tab_indicator_gray"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="12sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentScheduleDrinkIntervalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_about_borderline"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fragmentScheduleFallLayout"
        app:layout_constraintStart_toStartOf="@+id/fragmentScheduleFallLayout"
        app:layout_constraintEnd_toEndOf="@+id/fragmentScheduleFallLayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_drinking_interval"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/fragmentScheduleDrinkingIntervalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_interval"
            android:textColor="@color/tab_indicator_gray"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="12sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>