<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nameDialogLayout"
    android:layout_width="match_parent"
    android:background="@color/blue900"
    android:layout_height="wrap_content">
    <TextView
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"
        android:id="@+id/nameDialogTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_marginTop="8dp"
        android:id="@+id/nameDialogView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_indicator_gray"
        app:layout_constraintStart_toStartOf="@id/nameDialogTextView"
        app:layout_constraintTop_toBottomOf="@id/nameDialogTextView"
        app:layout_constraintEnd_toEndOf="@id/nameDialogTextView"/>

    <EditText
        android:id="@+id/nameDialogEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:hint="@string/enter_your_name"
        android:background="@drawable/drawable_about_borderline"
        android:textColor="@color/white"
        android:textColorHint="@color/tab_indicator_gray"
        app:layout_constraintStart_toStartOf="@id/nameDialogTextView"
        app:layout_constraintTop_toBottomOf="@id/nameDialogView"
        app:layout_constraintEnd_toEndOf="@id/nameDialogTextView"/>

    <Button
        android:id="@+id/nameDialogOKButton"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:background="@drawable/drawable_next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameDialogEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>